Added training Request

--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -47,7 +47,7 @@
   </nav>
   <br>
   <br>
-  <div class="col-12 col-sm-10 col-md-9 col-lg-8 container-fluid">
-    <app-admin-welcome-screen></app-admin-welcome-screen>
+  <div class="col-12 col-sm-12 col-md-12 col-lg-12 container-fluid">
+    <app-training-request></app-training-request>
   </div>
   
