--- a/src/app/admin-dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard/admin-dashboard.component.html
@@ -29,6 +29,9 @@
         <li class="nav-item">
             <a class="nav-link" href="#">Add / Block</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Edit Technology</a>
+        </li>
       </ul>
       <ul class="navbar-nav ml-auto">
             <li class="nav-item">
@@ -40,6 +43,6 @@
   <br>
   <br>
   <div class="col-12 col-sm-12 col-md-12 col-lg-12 container-fluid">
-    <app-admin-welcome-screen></app-admin-welcome-screen>
+    <app-admin-completed-training></app-admin-completed-training>
   </div>
   
