--- a/src/app/user-dashboard/current-training/current-training.component.html
+++ b/src/app/user-dashboard/current-training/current-training.component.html
@@ -1,4 +1,6 @@
 <div class="container-fluid col-12 col-sm-12 col-md-12 col-lg-12">
+    <h2 class="text-center">Current Trainings</h2>
+    <br>
     <div class="table-responsive">
     <table class="table table-bordered">
         <thead class="thead-dark">
