--- a/src/app/mentor-dashboard/mentor-dashboard/mentor-dashboard.component.html
+++ b/src/app/mentor-dashboard/mentor-dashboard/mentor-dashboard.component.html
@@ -48,6 +48,6 @@
   <br>
   <br>
   <div class="col-12 col-sm-12 col-md-12 col-lg-12 container-fluid">
-    <app-completed-training></app-completed-training>
+    <app-mentor-profile></app-mentor-profile>
   </div>
   
