Added Add Block User Admin

--- a/src/app/admin-dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard/admin-dashboard.component.html
@@ -43,6 +43,6 @@
   <br>
   <br>
   <div class="col-12 col-sm-12 col-md-12 col-lg-12 container-fluid">
-    <app-admin-completed-training></app-admin-completed-training>
+    <app-add-block-user></app-add-block-user>
   </div>
   
