--- a/src/app/user-dashboard/dashboard/dashboard.component.html
+++ b/src/app/user-dashboard/dashboard/dashboard.component.html
@@ -48,6 +48,6 @@
   <br>
   <br>
   <div class="col-12 col-sm-12 col-md-12 col-lg-12 container-fluid">
-    <app-user-payment></app-user-payment>
+    <app-user-notification></app-user-notification>
   </div>
   
