--- a/src/app/admin-dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard/admin-dashboard.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" [routerLink]="['welcome']">
         Mentor On Demand
     </a>
 </nav>
@@ -17,25 +17,25 @@
          [ngClass]="{'collapse': collapsed, 'navbar-collapse': true}">
       
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Current Trainings</a>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['current-training']">Current Trainings</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Completed Trainings</a>
+          <a class="nav-link" [routerLink]="['completed-training']">Completed Trainings</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Payments</a>
+            <a class="nav-link" [routerLink]="['payment']">Payments</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Add / Block</a>
+            <a class="nav-link" [routerLink]="['edit-users']">Add / Block</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Edit Technology</a>
+            <a class="nav-link" [routerLink]="['technology']">Edit Technology</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Logout</a>
+                <a class="nav-link" [routerLink]="['/user-login']">Logout</a>
             </li>
       </ul>
     </div>
@@ -43,6 +43,6 @@
   <br>
   <br>
   <div class="col-12 col-sm-12 col-md-12 col-lg-12 container-fluid">
-    <app-admin-payment></app-admin-payment>
+    <router-outlet></router-outlet>
   </div>
   
