--- a/src/app/mentor-dashboard/mentor-dashboard/mentor-dashboard.component.html
+++ b/src/app/mentor-dashboard/mentor-dashboard/mentor-dashboard.component.html
@@ -31,10 +31,6 @@
             <a class="nav-link" href="#">Payments</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0 ml-auto">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search Technology" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
       <ul class="navbar-nav ml-auto">
           <li class="nav-item">
               <a class="nav-link" href="#">Notifications</a>
@@ -48,6 +44,6 @@
   <br>
   <br>
   <div class="col-12 col-sm-12 col-md-12 col-lg-12 container-fluid">
-    <app-mentor-notification></app-mentor-notification>
+    <app-mentor-payment></app-mentor-payment>
   </div>
   
