--- a/src/app/mentor-dashboard/mentor-dashboard/mentor-dashboard.component.html
+++ b/src/app/mentor-dashboard/mentor-dashboard/mentor-dashboard.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" [routerLink]="['welcome']">
         Mentor On Demand
     </a>
 </nav>
@@ -17,26 +17,26 @@
          [ngClass]="{'collapse': collapsed, 'navbar-collapse': true}">
       
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Current Training 
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['current-training']">Current Training 
               <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Completed Trainings</a>
+          <a class="nav-link" [routerLink]="['completed-training']">Completed Trainings</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Profile</a>
+            <a class="nav-link" [routerLink]="['profile']">Profile</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Payments</a>
+            <a class="nav-link" [routerLink]="['payment']">Payments</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-              <a class="nav-link" href="#">Notifications</a>
+              <a class="nav-link" [routerLink]="['notifications']">Notifications</a>
           </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Logout</a>
+                <a class="nav-link" [routerLink]="['/user-login']">Logout</a>
             </li>
       </ul>
     </div>
@@ -44,6 +44,6 @@
   <br>
   <br>
   <div class="col-12 col-sm-12 col-md-12 col-lg-12 container-fluid">
-    <app-mentor-payment></app-mentor-payment>
+    <router-outlet></router-outlet>
   </div>
   
