--- a/src/app/user-dashboard/dashboard/dashboard.component.html
+++ b/src/app/user-dashboard/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" [routerLink]="['welcome']">
         Mentor On Demand
     </a>
 </nav>
@@ -17,30 +17,30 @@
          [ngClass]="{'collapse': collapsed, 'navbar-collapse': true}">
       
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Current Training 
-              <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['current-training']">Current Training</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Completed Trainings</a>
+          <a class="nav-link" [routerLink]="['completed-training']">Completed Trainings</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Profile</a>
+            <a class="nav-link" [routerLink]="['profile']">Profile</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Receipt</a>
+            <a class="nav-link" [routerLink]="['payment']">Payments</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0 ml-auto">
         <input class="form-control mr-sm-2" type="search" placeholder="Search Technology" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <button class="btn btn-outline-success my-2 my-sm-0" 
+                type="submit" [routerLink]="['search']">Search</button>
       </form>
       <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-              <a class="nav-link" href="#">Notifications</a>
+              <a class="nav-link" [routerLink]="['notifications']">Notifications</a>
           </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Logout</a>
+                <a class="nav-link" [routerLink]="['/user-login']">Logout</a>
             </li>
       </ul>
     </div>
@@ -48,6 +48,6 @@
   <br>
   <br>
   <div class="col-12 col-sm-12 col-md-12 col-lg-12 container-fluid">
-    <app-mentor-search></app-mentor-search>
+    <router-outlet></router-outlet>
   </div>
   
