--- a/src/app/user-dashboard/mentor-search/mentor-search.component.html
+++ b/src/app/user-dashboard/mentor-search/mentor-search.component.html
@@ -17,6 +17,12 @@
                 <h6>Expertise Technology : <small>{{ mentor.TechnologyName }}</small></h6>
                 <h6>Years of Experience : <small>{{ mentor.YearsOfExperience }}</small></h6>
                 <h6>Linked In Profile : <small><a href="mentor.LinkedInUrl">Here</a></small></h6>
+                <div class="d-flex justify-content-center">
+                    <button class="btn btn-success" type="submit" 
+                            [routerLink]="['/user-dashboard','training-request']">
+                        Request Training
+                    </button>
+                </div>
             </div>
         </div>
     </div>
